- Fixes layout bugs, adds description to connection view header

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -76,7 +76,7 @@ html {
   }
   h2 {
     font-weight: $weight-light;
-    font-size: 32px;
+    font-size: 30px;
     color: $black;
     letter-spacing: -0.81px;
     margin: 0;
@@ -400,7 +400,14 @@ button {
 :global(.Dropdown-option.is-selected) {
   font-weight: 500;
 }
-
+:global(.detailViewHead) {
+  p {
+    margin: 0;
+    font-size: 14px;
+    color: $gray-dark;
+    letter-spacing: 0;
+  }
+}
 :global(.category-filter) {
   margin-bottom: 40px;
   a {
