--- a/src/components/CloudConnectionsView/CloudConnectionsView.scss
+++ b/src/components/CloudConnectionsView/CloudConnectionsView.scss
@@ -26,9 +26,6 @@ $connectionHeaderBg: #D9DCE3;
   background-color: $connectionHeaderBg;
   margin-top: 64px;
   padding: 16px;
-  h2 {
-    margin-top: 8px;
-  }
   .connectionTypeImg {
     margin-right: 64px;
     float: left;
