--- a/src/components/WizardVms/WizardVms.scss
+++ b/src/components/WizardVms/WizardVms.scss
@@ -33,6 +33,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     :global(.item) {
       position: relative;
       cursor: pointer;
+      padding-left: 0;
       span:nth-child(2) {
         flex: 2;
       }
